remoção do singleton
