# .net/api/swagger/swagger_output.json
@@ -3,7 +3,7 @@
   "info": {
     "version": "3.0.0",
     "title": "LeeBank REST API",
-    "description": ""
+    "description": "API for Lee Bank remote applications"
   },
   "host": "localhost:3000",
   "basePath": "/",
@@ -130,20 +130,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/maintenance/datasets/reset": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
